--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     cursor: pointer;
     z-index: 1000;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.7em;
     animation: heartbeat 1.5s infinite;
   }
 
