--- a/message.html
+++ b/message.html
@@ -308,7 +308,7 @@
         </div>
       </div>
     </div>
-    <div class="birthday-message2">
+    <div class="birthday-messages">
         <div>
             Hello, my love!
             <br>
